added code source/removed background img

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
-  <body style="background-image: url('images/bkwtbackground.jpg')">
+  <body>
     <div class="container">
       <div
         class="weather-app"
@@ -98,6 +98,14 @@
             <li>20°C/12°C</li>
           </ul>
         </div>
+        <br />
+        <p class="code-link">
+          <a
+            href="https://github.com/neecolacodes/my-weather-app"
+            target="_blank"
+            >Open-source code</a
+          >, by Nicole Cybulski
+        </p>
       </div>
     </div>
     <script src="src/index.js"></script>
